--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "whyfall",
   "version": "0.1.0",
+  "proxy" : "127.0.0.1:8000",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
